@@ -7,6 +7,7 @@ import org.springframework.security.config.annotation.web.configuration.EnableWe
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.csrf.HttpSessionCsrfTokenRepository;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
@@ -21,9 +22,9 @@ public class SecurityConfig {
         return request -> {
             CorsConfiguration config = new CorsConfiguration();
             config.setAllowCredentials(true);
-            config.setAllowedOriginPatterns(Collections.singletonList("*"));
-            config.setAllowedMethods(List.of("GET", "POST"));
-            config.setAllowedHeaders(List.of("*"));
+            config.setAllowedOriginPatterns(List.of("http://localhost:8080")); // Restrict to your frontend origin
+            config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE")); // Allow common REST methods
+            config.setAllowedHeaders(List.of("Content-Type", "X-CSRF-TOKEN")); // Allow necessary headers
             return config;
         };
     }
@@ -32,15 +33,15 @@ public class SecurityConfig {
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
                 .cors(corsConfig -> corsConfig.configurationSource(corsConfigurationSource()))
-                .csrf(AbstractHttpConfigurer::disable)
+                .csrf(csrf -> csrf.csrfTokenRepository(new HttpSessionCsrfTokenRepository())) // Use HttpSessionCsrfTokenRepository
                 .httpBasic(AbstractHttpConfigurer::disable)
                 .formLogin(AbstractHttpConfigurer::disable)
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.ALWAYS))
                 .authorizeHttpRequests((authorizeRequests) ->
                         authorizeRequests
-//                                .requestMatchers("/api/chargingStation/fetch").authenticated()
-                                .requestMatchers("/api/localSearch/**").permitAll()
-                                .anyRequest().permitAll())
+                                .requestMatchers("/", "/login", "/signup", "/css/**", "/js/**", "/img/**").permitAll()
+                                .requestMatchers("/api/auth/**", "/api/localSearch/**", "/health", "/api/chargingStation/range", "/api/chargingStation/detail").permitAll()
+                                .anyRequest().authenticated())
                 .logout(logout -> logout
                         .logoutUrl("/api/auth/logout")
                         .logoutSuccessUrl("/")
@@ -51,4 +52,5 @@ public class SecurityConfig {
         return http.build();
     }
 }
+
 
